# qt-example

./: CMakeLists.txt  appveyor.yml  main.cpp
CMakeModules/: CreateDirectoryGroups.cmake  DownloadBundledExternal.cmake
